# gw2-buddy

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yml  check.yml  release.yml
arcdps/: Cargo.toml
arcdps/src/: lib.rs  plugin.rs  ui.rs
core/: Cargo.toml  build.rs
core/src/: handler.rs  lib.rs
core/src/buddy/: event.rs  mod.rs  ui.rs
core/src/combat/: agent.rs  cast.rs  player.rs  skill.rs  transfer.rs
core/src/data/: skill_info.rs
core/src/history/: mod.rs
core/src/ui/: breakbar_log.rs  buff_log.rs  cast_log.rs  multi_view.rs
nexus/: Cargo.toml  build.rs
nexus/src/: lib.rs
