[package]
name = "arcdps_buddy"
version = "0.7.0"
edition = "2024"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-buddy"

[dependencies]
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = [
    "serde",
    "settings",
    "update",
] }
arcdps = { git = "https://github.com/zerthox/arcdps-rs", features = [
    "log",
    "serde",
    "strum",
] }
buddy = { path = "../core" }
semver = { workspace = true }
log = { workspace = true, features = ["release_max_level_info"] }


[build-dependencies]
winresource = "0.1.17"

[lib]
crate-type = ["cdylib"]

[package.metadata.winresource]
ProductName = "ArcDPS Buddy"
OriginalFilename = "arcdps_buddy.dll"
