[package]
name = "arcdps_buddy"
version = "0.7.0"
edition = "2024"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-buddy"

[dependencies]
arc_util = { workspace = true, features = ["serde", "settings", "update"] }
arcdps = { workspace = true, features = ["log"] }
buddy = { path = "../core" }
semver = { workspace = true }
log = { workspace = true }

[build-dependencies]
winresource = "0.1.17"

[lib]
crate-type = ["cdylib"]

[package.metadata.winresource]
ProductName = "ArcDPS Buddy"
OriginalFilename = "arcdps_buddy.dll"
